fix: chrome bug, not wrapping text in popup msg div

--- a/assets/scss/layout/_leaflet.scss
+++ b/assets/scss/layout/_leaflet.scss
@@ -12,4 +12,10 @@
 //   margin-bottom: 15px;
 // }
 
+// fix a chrome bug in "msg" popup, not breaking long words
+.leaflet-popup-content {
+  .msg {
+    overflow-wrap: break-word;
+  }
+}
 
